k8s/global-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: global-shared-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: jenkins.aiops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-service.ns-devops.svc.cluster.local
                port:
                  number: 8080

    - host: grafana.aiops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service.ns-monitoring.svc.cluster.local
                port:
                  number: 3000

    - host: api.aiops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: log-agent-api-active-service.ns-ai-ops.svc.cluster.local
                port:
                  number: 8000
