k8s/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api
  namespace: ns-ai-ops
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: platform-shared-alb
spec:
  rules:
    - host: api.aiops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: log-agent-api-active-service
                port:
                  number: 8000
